<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_popular">

    <fragment
        android:id="@+id/navigation_popular"
        android:name="banquemisr.challenge05.ui.Popular.PopularFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_popular" />

    <fragment
        android:id="@+id/navigation_nowplaying"
        android:name="banquemisr.challenge05.ui.NowPlaying.NowPlayingFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_nowplaying" />

    <fragment
        android:id="@+id/navigation_upcomming"
        android:name="banquemisr.challenge05.ui.Upcoming.UpcomingFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_upcoming" />
</navigation>